Add js confirmation

--- a/templates/records_table.mustache
+++ b/templates/records_table.mustache
@@ -41,3 +41,9 @@
 {{# addnewlink }}
     {{{ addnewlink }}}
 {{/addnewlink}}
+
+{{#js}}
+    require(['tool_odeialba/confirmation'], function(confirmation) {
+        confirmation.init();
+    });
+{{/js}}
